[package]
name = "rustytime"
description = "Rusty Time - A simple time tracking tool"
version = "0.1.4"
edition = "2021"
authors = ["Sebastian Frick <sebastian.frick@mail.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/s-frick/rustytime"
repository = "https://github.com/s-frick/rustytime"
keywords = ["cli", "time_tracking", "zeiterfassung", "project_management"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
log = { version = "0.4" }
sha2 = { version = "0.9" }
config = { version = "0.14", features = ["toml"] }
glob = "0.3"
shellexpand = "3.1"
toml = "0.8"
